# teng

./: .gitignore  Cargo.toml  README.md  TODO.md  bench.csv  history_bench.csv  interp-bench.sh  perf_history.md
archive/: INFO.md  components.rs  video.rs
examples/: boundschecker.rs  circlerasterizer.rs  circlerasterizer2.rs  exponentialgrowingboundschecker.rs  fpschecker.rs  simple.rs  ui.rs
examples/ecs/: main.rs
examples/editor/: main.rs
examples/fabrik/: main.rs
examples/falling-sand/: README.md  main.rs
examples/fastphysics/: main.rs  math.rs  spatial_hash_grid.rs
examples/flappy-bird/: main.rs
examples/pathfinding/: main.rs
examples/sprites/: animationcontroller.rs  goblin.rs  impulse.rs  main.rs  player.rs  setandforgetanimations.rs  sprite.rs  wgpurender.rs
examples/sprites/data/: .gitignore  imgpack_atlas_meta.json  source.txt  teng_atlas_meta.json
examples/sprites/gpu/: animation.rs  animationcontroller.rs  instancewriter.rs  mod.rs  rendering.rs  sprite.rs  spriteshader.wgsl  texture.rs
examples/sprites/wgpurender/: NOTES.md  learnwgpu.rs  marble.wgsl  shader.wgsl  shaderart2.wgsl  spriterenderer.rs  spriteshader.wgsl  texture.rs
examples/sprites/wgpurender/learnwgpu/: shadertoy.rs  texture.rs
src/: components.rs  display.rs  game.rs  lib.rs  main.rs  physics.rs  render.rs  renderer.rs  seeds.rs  util.rs
src/components/: debuginfo.rs  eventrecorder.rs  fpschecker.rs  fpslocker.rs  incremental.rs  keyboard.rs  mod.rs  mouse.rs  quitter.rs  ui.rs  video.rs
src/components/incremental/: animation.rs  boundschecker.rs  collisionboard.rs  falling.rs  mod.rs  planarvec.rs  player.rs  rasterize.rs  slingshot.rs  titlescreen.rs  ui.rs  world.rs  worldmap.rs
src/game/: components.rs  display.rs  render.rs  renderer.rs  seeds.rs  util.rs
src/game/components/: elevator.rs  eventrecorder.rs  fpschecker.rs  incremental.rs  video.rs
src/game/components/incremental/: animation.rs  bidivec.rs  boundschecker.rs  collisionboard.rs  falling.rs  planarvec.rs  player.rs  rasterize.rs  slingshot.rs  ui.rs  world.rs  worldmap.rs
src/rendering/: color.rs  display.rs  mod.rs  pixel.rs  render.rs  renderer.rs
src/util/: bidivec.rs  fixedupdate.rs  mod.rs  planarvec.rs  planarvec2.rs
teng/: Cargo.toml
teng/examples/: fpschecker.rs
teng/src/: lib.rs  render.rs  seeds.rs
teng/src/components/incremental/: boundschecker.rs  ui.rs
termill/: Cargo.toml
termill/src/: main.rs
