[package]
name = "termgame"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["serde"] }
smallvec = "1.13.2"
micromap = "0.0.15"
rand = "0.8.5"
anymap = "0.12.1"
noise = "0.9.0"

# for video playing:
rust-embed = "8.5.0"
video-rs = { version = "0.10.3", features = ["ndarray"] }
ndarray = "0.16.1"
tempfile = "3.16.0"

# event recording
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.5.29", features = ["derive"] }

[profile.release]
# for size:
#strip = true
#opt-level = 'z'

# for performance:
#lto = true
#codegen-units = 1
