[package]
name = "teng"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Niels Saurer <me@nielssaurer.com>"]
description = "A basic game engine for the terminal"
categories = ["game-engines", "command-line-interface"]
homepage = "https://github.com/skius/teng"
repository = "https://github.com/skius/teng"
documentation = "https://docs.rs/teng"

[lib]
name = "teng"
path = "src/lib.rs"

[[example]]
name = "flappy-bird"
path = "examples/flappy-bird/main.rs"

[[example]]
name = "fpschecker"
path = "examples/fpschecker.rs"

[[example]]
name = "ecs"
path = "examples/ecs/main.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "boundschecker"
path = "examples/boundschecker.rs"

[[example]]
name = "exponentialgrowingboundschecker"
path = "examples/exponentialgrowingboundschecker.rs"

[[example]]
name = "falling-sand"
path = "examples/falling-sand/main.rs"


[dependencies]
crossterm = { version = "0.28.1", features = ["serde"] }
smallvec = "1.13.2"
micromap = "0.0.15"
rand = "0.8.5"
anymap = "0.12.1"
noise = "0.9.0"

# event recording
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

