[package]
name = "teng"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Niels Saurer <me@nielssaurer.com>"]
description = "A basic game engine for the terminal"
categories = ["game-engines", "command-line-interface"]
homepage = "https://github.com/skius/teng"
repository = "https://github.com/skius/teng"
documentation = "https://docs.rs/teng"

[lib]
name = "teng"
path = "src/lib.rs"

[[example]]
name = "flappy-bird"
path = "examples/flappy-bird/main.rs"

[[example]]
name = "fpschecker"
path = "examples/fpschecker.rs"

[[example]]
name = "ecs"
path = "examples/ecs/main.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "boundschecker"
path = "examples/boundschecker.rs"

[[example]]
name = "exponentialgrowingboundschecker"
path = "examples/exponentialgrowingboundschecker.rs"

[[example]]
name = "falling-sand"
path = "examples/falling-sand/main.rs"

[[example]]
name = "circle-rasterizer"
path = "examples/circlerasterizer.rs"

[[example]]
name = "circle-rasterizer2"
path = "examples/circlerasterizer2.rs"

[[example]]
name = "fabrik"
path = "examples/fabrik/main.rs"

[[example]]
name = "pathfinding"
path = "examples/pathfinding/main.rs"

[[example]]
name = "ui"
path = "examples/ui.rs"

[[example]]
name = "fast-physics"
path = "examples/fastphysics/main.rs"

[[example]]
name = "sprites"
path = "examples/sprites/main.rs"



[dependencies]
crossterm = { version = "0.28.1", features = ["serde"] }
smallvec = "1.13.2"
micromap = "0.0.15"
rand = "0.8.5"
anymap = "0.12.1"

# event recording
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# some examples
[dev-dependencies]
rayon = "1.10.0"

# for sprites example
image = "0.25.5"
rotsprite = "0.1.4"
wgpu = { version = "24" }
bytemuck = { version = "1.22.0", features = [ "derive" ] }
pollster = "0.4.0"
env_logger = "0.11"
log = "0.4"
cgmath = "0.18.0"
anyhow = "1.0"