[package]
name = "teng"
version = "0.1.0"
edition = "2021"

[lib]
name = "teng"
path = "src/lib.rs"

[[example]]
name = "flappy-bird"
path = "examples/flappy-bird/main.rs"

[[example]]
name = "fpschecker"
path = "examples/fpschecker.rs"

[dependencies]
crossterm = { version = "0.28.1", features = ["serde"] }
smallvec = "1.13.2"
micromap = "0.0.15"
rand = "0.8.5"
anymap = "0.12.1"
noise = "0.9.0"

# event recording
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.5.29", features = ["derive"] }